[gd_scene load_steps=3 format=3 uid="uid://cwdthf0ljkwut"]

[ext_resource type="Script" uid="uid://dtowoe4wqg5k1" path="res://Scenes/PlayerGUI/SessionMenu/SessionMenu.gd" id="1_62h2g"]
[ext_resource type="PackedScene" uid="uid://bg56bjdidficu" path="res://Scenes/UI/GeneralButton/GeneralButton.tscn" id="1_ytcdc"]

[node name="GameMEnu" type="CanvasLayer" node_paths=PackedStringArray("OptionsMenu", "TimerLabel", "GameTimer")]
script = ExtResource("1_62h2g")
OptionsMenu = NodePath("Options")
TimerLabel = NodePath("GameStatus/TimerLabel")
GameTimer = NodePath("GameStatus/GameTimer")

[node name="Options" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(400, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.355314, 0.355314, 0.355314, 1)

[node name="ButtonContainer" type="VBoxContainer" parent="Options/BackgroundColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="ReturnButton" parent="Options/BackgroundColor/ButtonContainer" instance=ExtResource("1_ytcdc")]
layout_mode = 2
text = "Return"

[node name="QuitButton" parent="Options/BackgroundColor/ButtonContainer" instance=ExtResource("1_ytcdc")]
layout_mode = 2
text = "Quit"

[node name="GameStatus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1016.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="GameStatus"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 16.0
offset_right = 88.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Time Left: 60"
horizontal_alignment = 1

[node name="GameTimer" type="Timer" parent="GameStatus"]

[connection signal="pressed" from="Options/BackgroundColor/ButtonContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Options/BackgroundColor/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
